--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <i class="fa-solid fa-magnifying-glass mt-4"></i>
+                    <i class="fa-solid fa-magnifying-glass mt-4" id="#searchBar"></i>
                     <i class="fa-sharp fa-solid fa-cart-shopping px-3 mt-4"></i>
                 </form>
             </div>
@@ -73,38 +73,40 @@
 
         <!-- SECTION FOR TEES -->
 
-        <div class="section-texts">            
+        <div class="section-texts">
             <h5 class="section-text">Summer 2022</h5>
             <h3 class="section-text-bold">Hip-Hop Tees</h3>
         </div>
 
 
-        <section class="row">
-            <div class="card-group">
-                <div class="card">
-                    <img class="card-img-top" src="./imgs/16_600x.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">KARACHI TEE</h5>
-                        <p class="card-text">RS.3,450</p>
+        <center>
+            <section class="row">
+                <div class="card-group">
+                    <div class="card">
+                        <img class="card-img-top" src="./imgs/16_600x.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">KARACHI TEE</h5>
+                            <p class="card-text">RS.3,450</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="./imgs/10_af887e35-4846-436e-ad39-d93c870d08bb_600x.png"
+                            alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">YNGSTNR TEE</h5>
+                            <p class="card-text">RS.3,250</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="./imgs/13_600x.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">SV GOLD BLACK</h5>
+                            <p class="card-text">RS.3,450</p>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
-                    <img class="card-img-top" src="./imgs/10_af887e35-4846-436e-ad39-d93c870d08bb_600x.png"
-                        alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">YNGSTNR TEE</h5>
-                        <p class="card-text">RS.3,250</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-img-top" src="./imgs/13_600x.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">SV GOLD BLACK</h5>
-                        <p class="card-text">RS.3,450</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+            </section>
+        </center>
 
         <center><button type="button" class="btn btn-dark mt-5">VIEW ALL PRODUCTS</button></center>
 
@@ -112,7 +114,7 @@
 
         <!-- SECTION FOR SHORTS -->
 
-        <div class="section-texts">            
+        <div class="section-texts">
             <h3 class="section-text">Shorts</h3>
         </div>
 
@@ -126,8 +128,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="./imgs/shorts.png"
-                        alt="Card image cap">
+                    <img class="card-img-top" src="./imgs/shorts.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">YNGSTNR SHORT ORANGE</h5>
                         <p class="card-text">RS.4,490</p>
@@ -142,7 +143,7 @@
 
         <!-- SECTION FOR CUBAN -->
 
-        <div class="section-texts">            
+        <div class="section-texts">
             <h3 class="section-text">Cuban</h3>
         </div>
 
@@ -156,34 +157,30 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="./imgs/cuban2.png"
-                        alt="Card image cap">
+                    <img class="card-img-top" src="./imgs/cuban2.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">VIVID CUBAN</h5>
                         <p class="card-text">RS.4,990</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="./imgs/cuban3.png"
-                        alt="Card image cap">
+                    <img class="card-img-top" src="./imgs/cuban3.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">RUSTY CUBAN</h5>
                         <p class="card-text">RS.4,990</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="./imgs/cuban4.png"
-                        alt="Card image cap">
+                    <img class="card-img-top" src="./imgs/cuban4.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">TRIPPY CUBAN</h5>
                         <p class="card-text">RS.4,990</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="./imgs/cuban5.png"
-                        alt="Card image cap">
+                    <img class="card-img-top" src="./imgs/cuban5.png" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">TRIPPY CUBAN</h5>
+                        <h5 class="card-title">JIGSAW CUBAN</h5>
                         <p class="card-text">RS.4,990</p>
                     </div>
                 </div>
@@ -193,6 +190,66 @@
         <center><button type="button" class="btn btn-dark mt-5">VIEW ALL PRODUCTS</button></center>
 
         <hr>
+
+        <div class="section-texts">
+            <h5 class="section-text">Summer 2022</h5>
+        </div>
+
+        <section class="row">
+            <div class="container d-flex">
+                <div class="columnpicture">
+                    <img src="./imgs/yunus.png" alt="">
+                </div>
+                <div class="columnproduct ml-auto">
+                    <div class="card-group">
+                        <div class="card card3">
+                            <img class="card-img-top" src="./imgs/cuban1.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">BLUE BANDANA CUBAN</h5>
+                                <p class="card-text">RS.4,990</p>
+                            </div>
+                        </div>
+                    </div>
+                    <center><button type="button" class="btn btn-dark">VIEW ALL PRODUCTS</button></center>
+                </div>
+            </div>
+        </section>
+
+        <hr>
+
+        <footer class="row">
+            <div class="container d-flex mt-5 mb-5">
+                <div class="about-the-shop">
+                    <div class="footer-texts">
+                        <h5 class="footer-text">ABOUT THE SHOP</h5>
+                    </div>
+                    <p class="footer-about-us">Stunner Vision is the Official Streetwear Brand of Pakistani rap duo
+                        Young Stunners.<br><br>With roots firmly planted in the Hip-hop culture, #TeamStunner led by
+                        this entrepreneurial duoaims to push the culture forward with their take on high-end streetwear
+                        the youth of today friends for. The fusion of HipHop with Elite Streetwear has never been
+                        this... Stunning!<br><br>All Products are designed in Karachi and 100% made in Pakistan.
+                        #AsliHai</p>
+                </div>
+                <div class="support-section">
+                    <h5 class="footer-text">Support</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Search</a></li>
+                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#">Design Ideology</a></li>
+                        <li><a href="#">Address</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Delivery Policy</a></li>
+                        <li><a href="#">Return Policy</a></li>
+                    </ul>
+                </div>
+                <div class="newsletter-section">
+                    <h5 class="footer-text">Newsletter</h5>
+                    <p class="footer-about-us">Subscribe to receive updates, access to exclusive deals, and more.</p>
+                    <input type="text" placeholder="Enter your email address">
+                    <button type="button" class="btn btn-footer btn-dark">SUBSCRIBE</button>
+                </div>
+            </div>
+        </footer>
 
     </main>
 
